tests/test49.rael.exp
32
Error [3:5]: '^' outside a routine is not permitted
|     ^ "21"
|     ^
